--- a/app/src/main/res/layout/drawer_cs_include.xml
+++ b/app/src/main/res/layout/drawer_cs_include.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/ll_setting_dl_contents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -22,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_50dp"
                 android:layout_alignParentLeft="true"
-                android:text="- 1:1 문의하기"
+                android:text="1:1 문의하기"
                 android:gravity="center_vertical"
                 android:textColor="@color/textColor_deep"
                 android:textSize="@dimen/txt_main"
@@ -38,7 +37,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50dp"
-            android:text="- 고객센터"
+            android:text="고객센터"
             android:gravity="center_vertical"
             android:textColor="@color/textColor_deep"
             android:background="@drawable/bgr_dl_list"
@@ -49,7 +48,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50dp"
-            android:text="- 카카오톡 플러스"
+            android:text="카카오톡 플러스"
+            android:textColor="@color/textColor_deep"
+            android:background="@drawable/bgr_dl_list"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/txt_main"
+            android:paddingLeft="@dimen/height_10dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_50dp"
+            android:text="입찰 교육 신청"
             android:textColor="@color/textColor_deep"
             android:background="@drawable/bgr_dl_list"
             android:gravity="center_vertical"
