--- a/app/src/main/res/drawable/bgr_callbtn.xml
+++ b/app/src/main/res/drawable/bgr_callbtn.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
+        android:topLeftRadius="4dp"
+        android:topRightRadius="4dp"
+        android:bottomLeftRadius="4dp"
+        android:bottomRightRadius="4dp"
         />
 
     <solid
@@ -13,7 +13,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#bebebe"
+        android:color="#aaaaaa"
         /></shape>
 
 
