--- a/app/src/main/res/layout/drawer_setting_include.xml
+++ b/app/src/main/res/layout/drawer_setting_include.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/ll_setting_dl_contents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -25,7 +24,7 @@
                 android:layout_alignParentTop="true"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
-                android:text="- 회원가입약관"
+                android:text="회원가입약관"
                 android:textColor="@color/textColor_deep"
                 android:textSize="@dimen/txt_main" />
 
@@ -38,7 +37,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50dp"
-            android:text="- 개인정보 수집 및 이용에 관한 사항"
+            android:text="개인정보 수집 및 이용에 관한 사항"
             android:textSize="@dimen/txt_main"
             android:gravity="center_vertical"
             android:textColor="@color/textColor_deep"
@@ -49,7 +48,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50dp"
-            android:text="- 로그아웃"
+            android:text="로그아웃"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/height_10dp"
             android:textColor="@color/textColor_deep"
