--- a/app/src/main/res/layout/setbid_businessselect.xml
+++ b/app/src/main/res/layout/setbid_businessselect.xml
@@ -71,16 +71,6 @@
             android:background="@drawable/bgr_btn_unclicked"
             />
 
-        <Button
-            android:id="@+id/btn_sell_setbid_business"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="매각"
-            android:textSize="@dimen/Txt_btnUnClicked"
-            android:textColor="@color/textColor_unclicked"
-            android:background="@drawable/bgr_btn_unclicked"
-            />
     </LinearLayout>
 
     <LinearLayout
@@ -93,10 +83,11 @@
         android:id="@+id/elv_setbid_businessSelect"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="13"
+        android:layout_weight="12"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="@dimen/height_10dp"
+        android:layout_marginBottom="@dimen/height_5dp"
         android:groupIndicator="@android:color/transparent"
         >
     </ExpandableListView>
