--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,6 +28,7 @@
     <dimen name="height_70dp">70dp</dimen>
     <dimen name="height_90dp">90dp</dimen>
     <dimen name="height_100dp">100dp</dimen>
+    <dimen name="height_115dp">115dp</dimen>
     <dimen name="height_130dp">130dp</dimen>
     <dimen name="height_150dp">150dp</dimen>
     <dimen name="height_180dp">180dp</dimen>
