--- a/app/src/main/res/layout/drawer_bidresult_include.xml
+++ b/app/src/main/res/layout/drawer_bidresult_include.xml
@@ -24,6 +24,7 @@
             >
 
             <TextView
+                android:id="@+id/tv_group_name_1_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="맞춤낙찰 1."
@@ -34,7 +35,7 @@
                 />
 
             <TextView
-                android:id="@+id/alert_setted1_dl"
+                android:id="@+id/alert_setted_1_dl_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_20dp"
                 android:layout_alignParentRight="true"
@@ -56,6 +57,7 @@
             >
 
             <TextView
+                android:id="@+id/tv_group_name_2_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="맞춤낙찰 2."
@@ -66,7 +68,7 @@
                 />
 
             <TextView
-                android:id="@+id/alert_setted2_dl"
+                android:id="@+id/alert_setted_2_dl_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_20dp"
                 android:layout_alignParentRight="true"
@@ -87,6 +89,7 @@
             >
 
             <TextView
+                android:id="@+id/tv_group_name_3_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="맞춤낙찰 3."
@@ -97,7 +100,7 @@
                 />
 
             <TextView
-                android:id="@+id/alert_setted3dl"
+                android:id="@+id/alert_setted_3_dl_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_20dp"
                 android:layout_alignParentBottom="true"
@@ -119,6 +122,7 @@
             android:background="@drawable/bgr_dl_list">
 
             <TextView
+                android:id="@+id/tv_group_name_4_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="맞춤낙찰 4."
@@ -129,7 +133,7 @@
                 />
 
             <TextView
-                android:id="@+id/alert_setted4_dl"
+                android:id="@+id/alert_setted_4_dl_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_20dp"
                 android:layout_alignParentRight="true"
@@ -150,6 +154,7 @@
             android:background="@drawable/bgr_dl_list">
 
             <TextView
+                android:id="@+id/tv_group_name_5_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="맞춤낙찰 5."
@@ -160,7 +165,7 @@
                 />
 
             <TextView
-                android:id="@+id/alert_setted5_dl"
+                android:id="@+id/alert_setted_5_dl_bidResult"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_20dp"
                 android:layout_alignParentRight="true"
