--- a/app/src/main/res/layout/listview_footer.xml
+++ b/app/src/main/res/layout/listview_footer.xml
@@ -10,6 +10,7 @@
 
 
     <TextView
+        android:id="@+id/tv_listview_footer_count"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/height_40dp"
         android:gravity="center"
