--- a/app/src/main/res/layout/setbid_titlechange.xml
+++ b/app/src/main/res/layout/setbid_titlechange.xml
@@ -45,6 +45,7 @@
 
 
         <EditText
+            android:id="@+id/et_chg_setbid_title"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_40dp"
             android:layout_marginLeft="20dp"
